--- a/src/assets/style/Generals/_sliderProduct.scss
+++ b/src/assets/style/Generals/_sliderProduct.scss
@@ -4,6 +4,18 @@
     align-items: center;
     justify-content: space-between;
     // flex-direction: row;
+    @media (max-width: 1200px) {
+        flex-direction: column;
+    }
+}
+.persanal__allInfo {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    @media (max-width: 567px) {
+        flex-direction: column;
+        justify-content: center;
+    }
 }
 .persanal__slider {
     display: flex;
@@ -21,6 +33,9 @@
     border-radius: 0%;
     margin-right: 35px !important;
     padding: 0% !important;
+    @media (max-width: 567px) {
+        display: none;
+    }
 }
 
 .mySwiper__item img {
@@ -76,6 +91,10 @@ swiper-container {
     display: flex;
     flex-direction: column;
     gap: 15px;
+    @include adaptive-value(padding-right, 130, 10, 1);
+    @media (max-width: 567px) {
+        @include adaptive-value(padding-bottom, 30, 10, 1);
+    }
 }
 .persanal__color {
     display: flex;
@@ -164,6 +183,9 @@ swiper-container {
     @include adaptive-value(padding-inline, 20, 12, 1);
     height: 100%;
     max-width: 350px;
+    @media (max-width: 567px) {
+        display: none;
+    }
 }
 .plan {
     &__title {
@@ -180,6 +202,6 @@ swiper-container {
         font-weight: 500;
         @include adaptive-value(font-size, 14, 12, 1);
         @include adaptive-value(line-height, 21, 16, 1);
-        color: #6B6B6B;
+        color: #6b6b6b;
     }
 }
